1.2.1i2:
    Core:
    * Improved validation of inventory data reported by checks
    * Added -d option to precompiled checks to enable debug mode
    * doc/treasures: added script for printing RRD statistics

    Event Console:
    * Moved source of Event Console into Check_MK project 
    * New button for resetting all rule hits counters
    * When saving a rule then its hits counter is always reset
    * New feature of hiding certain actions from the commands in the status GUI
    * FIX: rule simulator ("Try out") now handles cancelling rules correctly
    * New global option for enabling log entries for rule hits (debugging)
    * New icon linking to event views for the event services
    * check_mkevents outputs last worst line in service output
    * Max. number of queued connections on status sockets is configurable now
    * check_mkevents: new option -a for ignoring acknowledged events
    * New sub-permissions for changing comment and contact while updating an event

    Multisite:
    * Enable automation login with _username= and _secret=, while
      _secret is the content of var/check_mk/web/$USER/automation.secret
    * FIX: Fixed releasing of locks and livestatus connections when logging out
    * FIX: Fixed login/login confusions with index page caching
    * FIX: Speed-o-meter: Fixed calculation of Check_MK passive check invervals
    * Removed focus of "Full name" attribute on editing a contact
    * Quicksearch: Convert search text to regex when accessing livestatus
    * FIX: WATO Folder filter not available when WATO disabled
    * WATO Folder Filter no longer available in single host views
    * Added new painters "Service check command expanded" and
      "Host check command expanded"
    * FIX: Corrected garbled description for sorter "Service Performance data" 
    * Dashboard globes can now be filtered by host_contact_group/service_contact_group
    * Dashboard "iframe" attribute can now be rendered dynamically using the