@@ -311,6 +311,8 @@ define command {
        NOTIFY_CONTACTEMAIL='$CONTACTEMAIL$' \
        NOTIFY_CONTACTPAGER='$CONTACTPAGER$' \
        NOTIFY_NOTIFICATIONTYPE='$NOTIFICATIONTYPE$' \
+       NOTIFY_HOSTNOTIFICATIONNUMBER='$HOSTNOTIFICATIONNUMBER$' \
+       NOTIFY_SERVICENOTIFICATIONNUMBER='$SERVICENOTIFICATIONNUMBER$' \
        NOTIFY_HOSTNAME='$HOSTNAME$' \
        NOTIFY_HOSTALIAS='$HOSTALIAS$' \
        NOTIFY_HOSTADDRESS='$HOSTADDRESS$' \
