@@ -1,0 +1,10 @@
+Put your custom notification scripts here. All executable files will be read in.
+If you want your scripts to have user readable aliasses then put those into
+a comment into the second line, e.g.:
+
+#!/usr/bin/foolang 
+# Notify via Loudspeaker
+...
+
+You script retrieves all neccessary information about the actual notification
+in environment variables beginning with NOTIFY_.
